css/menu.css
h1 {
    white-space: pre;
    text-align: center;
    color: #2d1303;
}

/* Menu Header */
#menu-header h1 {
  font-size: 10vw;
  padding-top: 8vw;
  padding-bottom: 8vw;
}

@media screen and (min-width: 767px) {
  #menu-header h1 {
    font-size: 65px;
    padding-top: 25px;
    padding-bottom: 25px;
    margin-left: -50px;
    /*margin-left: -5px;*/
  }
}

#apps{
  margin: auto;
  text-align: center;
  max-height: 40px;
  background-color: #ff7700;
}

#apps a{
  padding: 0px;
  margin: 0px;
  z-index: 50;
}

.google{
  position: relative;
  top: -17px;
}

.apple{
  position: relative;
  border-color: black;
}

.key{
  margin: auto;
  min-width: 30vw;
  text-align: center;
}

.key h2{
  font-size: 20pt;
}

.fireicon{
  padding-left: 10px;
}

@media screen and (max-width: 767px) {
  .key h2{
    font-size: 18pt;
  }
}

@media screen and (max-width: 480px) {
  .key h2{
    font-size: 16pt;
  }
}

@media screen and (min-width: 767px) {
  .key h2 {
    margin-left: -35px;
  }
}

/* Catering Info */
#catering {
	background: #ff7700;
	margin: 0px;
  width: 100vw;
  height: 10vw;

  /*display: block;*/
}

#catering > h1 {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  margin: 0px;
  font-size: 5vw;
  color: #f1f1e7;
  padding-top: 3vw;
}

#try-app {
  background: #ff7700;
  margin: 0px;
  width: 100vw;
  height: 10vw;
}

#try-app h1 {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  margin: 0px;
  font-size: 5vw;
  color: #f1f1e7;
  padding-top: 3vw;
}

@media screen and (min-width: 767px) and (min-height: 571px) {
  #catering {
    height: 55px;
  }

  #catering h1 {
    font-size: 30px;
    padding-top: 20px;
    left: 44%;
  }

  /*.apple {
    margin-left: 1px;
  }*/

  #try-app {
    height: 55px;
  }

  #try-app h1 {
    font-size: 30px;
    padding-top: 15px;
    text-align: center;
    left: 44%;
  }
}

/* Category Headers */
#headers {
	background: #698723;
	margin: 0px;
  width: 100vw;
  height: 15vw;

  /*display: table;*/
}

#headers > h1 {
	position: relative;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  margin: 0px;
  font-size: 5vw;
  color: #f1f1e7;
  padding-top: 3vw;
}

#sig-headers {
  background: #698723;
  margin: 0px;
  width: 100vw;
  height: 20vw;

  /*display: table;*/

}

#sig-headers h1 {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  margin: 0px;
  font-size: 5vw;
  color: #f1f1e7;
  padding-top: 3vw;
}

@media screen and (min-width: 767px) and (min-height: 571px){
  #headers {
    height: 90px;
  }

  #headers > h1 {
    font-size: 40px;
    padding-top: 25px;
    left: 44%;
  }

  #sig-headers {
    height: 150px;
  }

  #sig-headers > h1 {
    font-size: 40px;
    padding-top: 25px;
    left: 44%;
  }
}

/* Galleries */
.carousel-inner img {
  width: 100vw;
}

.carousel-caption-below {
  padding: 5px 10px;
  overflow-y: scroll;
  color: #2d1303;
  background: white;
  text-align: center;
}

.carousel-caption-below > h3 {
  padding-top: 1.5vw;
  font-size: 5vw;
  white-space: pre;
}

.carousel-caption-below > h4 {
  font-size: 4vw;
}

.carousel-caption-below > ul > li {
  white-space: pre;
  list-style-type: none;
  font-size: 4vw;
}

.carousel-indicators {
  bottom: -20px;
  color: #698723;
  padding-bottom: 15px;
}

.carousel-indicators li {
  background: #ccc;
}

.carousel-indicators .active {
  background: #666;
}

.carousel-control .glyphicon,
.carousel-control .icon-prev,
.carousel-control .icon-next {
  font-size: 5vw;
}

.fireicon{
  color: #FD8126;
}

.grainicon{
  /*color: #D74937;*/
  color: #698723;;
}

.imgdiv{
  max-height: 700px;
  overflow: hidden;
}

.imgflip{
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
}

@media screen and (min-width: 1200px) {

  .imgdiv img{
    -webkit-transform: translate(0%,-10%);
      -ms-transform: translate(0%,-10%);
          transform: translate(0%,-10%);
  }

  .imgdiv .drinkimg{
    -webkit-transform: translate(0%,-20%);
      -ms-transform: translate(0%,-20%);
          transform: translate(0%,-20%);
  }

  .imgdiv .drinkflip{
    -webkit-transform: translate(0%,-15%) scaleX(-1);
      -ms-transform: translate(0%,-15%) scaleX(-1);
          transform: translate(0%,-15%) scaleX(-1);
  }

  .item .imgflip{
      -moz-transform: scaleX(-1);
      -o-transform: scaleX(-1);
      -webkit-transform: scaleX(-1);
      transform: scaleX(-1);
      filter: FlipH;
      -ms-filter: "FlipH";
  }

  .carousel-caption-below > h3 {
    padding-top: 15px;
    font-size: 35px;
  }

  .carousel-caption-below > h4 {
    font-size: 30px;
  }

  .carousel-caption-below > ul > li {
    font-size: 25px;
  }

  .carousel-control .glyphicon,
  .carousel-control .icon-prev,
  .carousel-control .icon-next {
    font-size: 40px;
  }
}

@media screen and (min-width: 1500px) {

  .imgdiv img{
    -webkit-transform: translate(0%,-20%);
      -ms-transform: translate(0%,-20%);
          transform: translate(0%,-20%);
  }
}

.grilledcap{
  min-height: 20vw;
  padding: 7vw;
  padding-top: 3vw;
  padding-bottom: 5vw;
}

.signaturecap{
  min-height: 22vw;
  padding: 7vw;
  padding-top: 3vw;
  padding-bottom: 5vw;
}

.drinkcap{
  min-height: 16vw;
  padding: 7vw;
  padding-top: 3vw;
  padding-bottom: 5vw;
}

@media screen and (min-width:767px) {
  .carousel-caption-below > h3 {
    font-size: 3vw;
    /*font-size: 27px;*/
  }

  .carousel-caption-below > h4 {
    font-size: 2vw;
    /*font-size: 20px;*/
  }

  .carousel-caption-below > ul > li {
    font-size: 1.9vw;
    margin-left: -37px;
  }

  .grilledcap, .signaturecap, .drinkcap{
    padding: 1vw;
    padding-top: 0vw;
    padding-bottom: 2vw;
  }

  .signaturecap {
    min-height: 18vw;
  }

  .drinkcap{
    min-height: 13vw;
  }

  .carousel-caption-below{
      position: absolute;
      padding: 2vw;
      max-width: 60vw;
      left: 15%;
      top: 10%;
      background: rgba(241, 241, 231, 0.7);
  }

}

/* Headers for circular image sections */
.circ-header {
  padding-top: 3vw;
}

.circ-header > h1 {
  font-size: 5vw;
}

.circ-header > h2 {
  font-size: 4vw;
  text-align: center;
  color: #2d1303;
}

@media screen and (min-width: 767px) {
  .circ-header {
    padding-top: 15px;
  }

  .circ-header > h1 {
    font-size: 40px;
    left: -75px;
  }

  .circ-header > h2 {
    font-size: 25px;
    left: -75px;
  }
}

/*Circular images style*/
.circular_category{
    border-radius:50%;
    display: inline-block;
}

.circle_content{
  background-size: cover;
  overflow: hidden;
  width: 20vw;
  height: 20vw;
  zoom: 1.2;
}

.price{
  font-size: 3vw;
}

.chicken{
  background: url(../images/chicken.jpg);
  background-position: center;
  background-size: 150%;
}

.tofu{
  background: url(../images/tofu.jpg);
  background-position: center;
  background-size: 110%;
}

.beef{
  background: url(../images/beef.jpg);
  background-position: center;
  background-size: 110%;
}

.pork{
  background: url(../images/pork.jpg);
  background-position: left center;
  background-size: 125%;
}

.salmon{
  background: url(../images/salmon.jpg);
  background-position: center;
  background-size: 150%;
}

.egg{
  background: url(../images/egg.jpg);
  background-position: center;
  background-size: 110%;
}

.rice{
  background: url(../images/rice.jpg);
  background-position: center top;
  background-size: 155%;
}

.peanut{
  background: url(../images/peanutsauce.jpg);
  background-position: center top;
  background-size: 200%;
}

.teriyaki{
  background: url(../images/teriyaki.jpg);
  background-position: center;
  background-size: 160%;
}

.three-row{
  width: 90%;
  margin-bottom: 3vw;
}

.two-row{
  width: 60%;
}

.two-space{
  margin-bottom: 3vw;
}

table {
  margin: auto;
  font-size: 4vw;
  color: #2d1303;
}

td {
  text-align: center;
}

@media screen and (min-width: 767px) {
  .circle_content{
    width: 12vw;
    height: 12vw;
  }

  .circ-desk td{
    padding: 1vw;
  }

  .circ-mobile{
    display: none;
  }

  .price{
    font-size: 25px;
  }

  table {
    font-size: 30px;
  }
}

@media screen and (min-width: 900px) {
  .circ-desk-sides {
    font-size: 2vw;
  }

  .circ-desk-sides td{
    padding: 1vw;
  }

  .circ-desk-sides .circle_content{
    width: 12vw;
    height: 12vw;
  }

  .circ-mobile-sides {
    display: none;
  }
}

@media screen and (max-width: 900px) {
  .circ-desk-sides{
    display: none;
  }
}

@media screen and (max-width: 720px){
  .circ-desk{
    display: none;
  }
}

